# ChangeLog for x11-libs/qt
# Copyright 1999-2009 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/x11-libs/qt/ChangeLog,v 1.586 2009/08/02 21:54:28 tommy Exp $

  04 Sep 2010; Ladislav Láska <ladislav.laska@gmail.com> qt-3.3.8b-r1.ebuild, 
  qt-3.3.8b-r2.ebuild:
  Changed dependency from virtual/postgresql-base to dev-db/postgresql-base,
  since the former no longer exists.
  
  10 Dec 2009; Petr Morávek [Xificurk] <xificurk@gmail.com>
  qt-3.3.8b-r1.ebuild, qt-3.3.8b-r2.ebuild: Sync from portage tree.
  Remove unused USE flags from metadata.

  14 Nov 2009; Jonathan Callen <abcd@gentoo.org> qt-3.3.8b-r1.ebuild,
  qt-3.3.8b-r2.ebuild:
  Remove mention of monolithic kde pkg

  03 Nov 2009; Ben de Groot <yngwin@gentoo.org> -qt-3.3.8b-r1.ebuild:
  Remove -r1 ebuild. Everybody should use -r2.

  02 Aug 2009; Thomas Sachau (Tommy[D]) <tommy@gentoo.org>
  qt-3.3.8b-r1.ebuild, qt-3.3.8b-r2.ebuild:
  Enable multilib support for qt-3.3.8b-r{1,2}

*qt-4.5.2 (27 Jun 2009)

  27 Jun 2009; Ben de Groot <yngwin@gentoo.org> +qt-4.5.2.ebuild:
  Qt 4.5.2 release version bump

*qt-3.3.8b-r2 (11 Jun 2009)

  11 Jun 2009; Ben de Groot <yngwin@gentoo.org>
  -files/0081-format-string-fixes.diff,
  -files/qt-3.3.4-0047-fix-kmenu-widget.diff,
  -files/qt-3.3.4-gcc4-volatile.patch,
  -files/qt-3.3.8-unicode-off-by-one.patch,
  -files/0185-fix-format-strings.diff, -files/qt4/Assistant.desktop,
  -files/qt-3.3.4-0051-qtoolbar_77047.patch, -files/qt-3.3.4-gcc4.patch,
  -files/qt-3.3.4-immodule-focus.patch,
  -files/qt-3.3.4-qclipboard-hack.patch,
  -files/qt-4.2.3-hppa-ldcw-fix.patch, -files/qt4/Designer.desktop,
  -files/qt-4.3.1-unicode-off-by-one.patch, -files/qt4/Linguist.desktop,
  -files/utf8-bug-qt3.diff, +qt-3.3.8b-r2.ebuild:
  Adding fix for pkgconfig issue in bug 185925. Removing no longer used
  patches from FILESDIR.

  06 Jun 2009; Markus Meier <maekke@gentoo.org> qt-4.5.1.ebuild:
  amd64 stable, bug #266201
