@@ -1,6 +1,10 @@
 # ChangeLog for x11-libs/qt
-# Copyright 1999-2009 Gentoo Foundation; Distributed under the GPL v2
+# Copyright 1999-2011 Gentoo Foundation; Distributed under the GPL v2
 # $Header: /var/cvsroot/gentoo-x86/x11-libs/qt/ChangeLog,v 1.586 2009/08/02 21:54:28 tommy Exp $
+
+  28 Feb 2011; Hanno Boeck <hanno@gentoo.org> qt-3.3.8b-r1.ebuild,
+  qt-3.3.8b-r2.ebuild:
+  Change dependency from media-libs/jpeg to virtual/jpeg.
 
   04 Sep 2010; Ladislav Láska <ladislav.laska@gmail.com> qt-3.3.8b-r1.ebuild, 
   qt-3.3.8b-r2.ebuild:
